Changes to be committed: 	new file:   .gitignore 	deleted:    1202.txt 	modified:   DSA/index.html 	modified:   DSA/new.py 	new file:   DSA/w10.2.js 	modified:   DSA/w10.js 	new file:   DSA/w11.5.js 	modified:   DSA/w9.js 	new file:   NodeJS/excercise1.js 	new file:   NodeJS/excercise2.js 	new file:   NodeJS/excercise3.js 	new file:   NodeJS/excercise4.js 	new file:   NodeJS/excercise5.js 	new file:   NodeJS/excercise6.js 	new file:   NodeJS/excercise7.js 	new file:   NodeJS/excercise8.js 	new file:   NodeJS/lib/data.xlsx 	new file:   NodeJS/lib/debug.log 	new file:   NodeJS/lib/expr5.txt 	new file:   NodeJS/lib/index.html 	new file:   NodeJS/lib/marks.xlsx 	new file:   NodeJS/lib/new-file.txt 	new file:   NodeJS/lib/random_words.txt 	new file:   NodeJS/lib/readme.txt 	new file:   NodeJS/lib/student.csv 	new file:   NodeJS/lib/user_info.txt 	new file:   NodeJS/package-lock.json 	new file:   NodeJS/package.json 	new file:   NodeJS2/excercise1.js 	new file:   NodeJS2/excercise2.js 	new file:   NodeJS2/excercise3.js 	new file:   NodeJS2/lib/gradious-assignment.exe 	new file:   NodeJS2/lib/mingw-get-setup.exe 	new file:   NodeJS2/lib/txtfile.txt 	new file:   NodeJS2/package-lock.json 	new file:   NodeJS2/package.json 	new file:   NodeJS3/excercise1.js 	new file:   NodeJS3/excercise2.js 	new file:   NodeJS3/excercise3.js 	new file:   NodeJS3/excercise4.js 	new file:   NodeJS3/lib/html/about.html 	new file:   NodeJS3/lib/html/contact.html 	new file:   NodeJS3/lib/html/home.html 	new file:   NodeJS3/lib/users.txt 	new file:   NodeJS3/package-lock.json 	new file:   NodeJS3/package.json 	deleted:    heelo.txt 	deleted:    hel.css 	deleted:    index.html

--- a/NodeJS3/lib/html/contact.html
+++ b/NodeJS3/lib/html/contact.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="text-align: center;">
-    <h1>DSA through JS-5</h1>
-    <h2>F<sub>12</sub> for console output</h2>
-    <p>hash maps-2</p>
+<body>
+    <h1>contacts</h1>
+    <h3>gmail:gradious@gmail.com</h3>
+    <h3>phone: 0700000000</h3>
 </body>
-<script src="w9.js"></script>
 </html>
