--- a/NodeJS3/lib/html/home.html
+++ b/NodeJS3/lib/html/home.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="text-align: center;">
-    <h1>DSA through JS-5</h1>
-    <h2>F<sub>12</sub> for console output</h2>
-    <p>hash maps-2</p>
+<body>
+    <h1>Welcome to the Home Page</h1>
+    <h3>Our company was founded in 2020</h3>
 </body>
-<script src="w9.js"></script>
-</html>
+</html> 
