--- a/NodeJS/lib/index.html
+++ b/NodeJS/lib/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="text-align: center;">
-    <h1>DSA through JS-5</h1>
-    <h2>F<sub>12</sub> for console output</h2>
-    <p>hash maps-2</p>
+<body>
+    <h1>hello world</h1>
 </body>
-<script src="w9.js"></script>
 </html>
